Better spacing in remove icon. Fixes #1923.
git-svn-id: https://svn.merengueproject.org/trunk@4710 5c12d508-d76f-0410-91c7-e3e856e0eb0f

--- a/merengueproj/merengue/media/css/render_blocks.css
+++ b/merengueproj/merengue/media/css/render_blocks.css
@@ -31,6 +31,7 @@
 
 .blockContainer .block .blockTools a.configure {
     background: transparent url("../img/configure.png") no-repeat 0px 0px;
+    height: 20px;
 }
 
 .blockContainer .block .blockTools a.remove {
